// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The List Component renders list with mocked items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main "
        style="position: relative;"
      >
        <div
          class="sc-AxiKw esByJH list-container"
        >
          <div
            class="sc-AxirZ iyLGjc"
            id="something"
          >
            something
          </div>
          <div
            class="sc-AxirZ iyLGjc"
            id="newItem"
          >
            this is new and different
          </div>
        </div>
        <div
          class="selectable-selectbox"
          style="left: 0px; top: 0px; width: 0px; height: 0px; z-index: 9000; position: absolute; cursor: default; will-change: transform; transform: translateZ(0);"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main "
      style="position: relative;"
    >
      <div
        class="sc-AxiKw esByJH list-container"
      >
        <div
          class="sc-AxirZ iyLGjc"
          id="something"
        >
          something
        </div>
        <div
          class="sc-AxirZ iyLGjc"
          id="newItem"
        >
          this is new and different
        </div>
      </div>
      <div
        class="selectable-selectbox"
        style="left: 0px; top: 0px; width: 0px; height: 0px; z-index: 9000; position: absolute; cursor: default; will-change: transform; transform: translateZ(0);"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The List Component renders loading state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main "
        style="position: relative;"
      >
        <div
          class="sc-AxiKw blunUs list-container"
        >
          <div
            class="sc-AxirZ iyLGjc"
            id="something"
          >
            something
          </div>
          <div
            class="sc-AxirZ iyLGjc"
            id="newItem"
          >
            this is new and different
          </div>
          <div
            class="sc-AxgMl gGVPGH"
          />
          <div
            class="sc-AxjAm dOJXqi"
          >
            <svg
              height="64px"
              version="1.1"
              viewBox="0 0 24 24"
              width="64px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icons/loading
              </title>
              <desc>
                Created with Sketch.
              </desc>
              <g
                fill="none"
                fill-rule="evenodd"
                id="icons/loading"
                stroke="none"
                stroke-width="1"
              >
                <path
                  d="M12,3 C16.9705627,3 21,7.02943725 21,12 C21,16.9705627 16.9705627,21 12,21 C7.02943725,
              21 3,16.9705627 3,12 C3.00557987,7.03175034 7.03175034,3.00557987 12,3 Z M12,
              6 C8.6877869,6.00360742 6.00360742,8.6877869 6,12 C6,15.3137085 8.6862915,18 12,
              18 C15.3137085,18 18,15.3137085 18,12 C18,8.6862915 15.3137085,6 12,6 Z"
                  fill="#E7E8E9"
                  id="Circle"
                />
                <path
                  d="M5.2024372,17.8987814 C3.83046557,16.3191262 3,14.2565459 3,12 C3.00216535,10.0719953 3.60980985,
              8.2858627 4.64302371,6.82151186 L7.37161286,8.18580643 C6.51604369,9.22251645 6.00157795,10.5511758 6,
              12 C6,13.7866197 6.78088802,15.3908532 8.01997569,16.4900122 L5.2024372,17.8987814 Z"
                  fill="#B9BCBD"
                  id="Combined-Shape"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="selectable-selectbox"
          style="left: 0px; top: 0px; width: 0px; height: 0px; z-index: 9000; position: absolute; cursor: default; will-change: transform; transform: translateZ(0);"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main "
      style="position: relative;"
    >
      <div
        class="sc-AxiKw blunUs list-container"
      >
        <div
          class="sc-AxirZ iyLGjc"
          id="something"
        >
          something
        </div>
        <div
          class="sc-AxirZ iyLGjc"
          id="newItem"
        >
          this is new and different
        </div>
        <div
          class="sc-AxgMl gGVPGH"
        />
        <div
          class="sc-AxjAm dOJXqi"
        >
          <svg
            height="64px"
            version="1.1"
            viewBox="0 0 24 24"
            width="64px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icons/loading
            </title>
            <desc>
              Created with Sketch.
            </desc>
            <g
              fill="none"
              fill-rule="evenodd"
              id="icons/loading"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M12,3 C16.9705627,3 21,7.02943725 21,12 C21,16.9705627 16.9705627,21 12,21 C7.02943725,
              21 3,16.9705627 3,12 C3.00557987,7.03175034 7.03175034,3.00557987 12,3 Z M12,
              6 C8.6877869,6.00360742 6.00360742,8.6877869 6,12 C6,15.3137085 8.6862915,18 12,
              18 C15.3137085,18 18,15.3137085 18,12 C18,8.6862915 15.3137085,6 12,6 Z"
                fill="#E7E8E9"
                id="Circle"
              />
              <path
                d="M5.2024372,17.8987814 C3.83046557,16.3191262 3,14.2565459 3,12 C3.00216535,10.0719953 3.60980985,
              8.2858627 4.64302371,6.82151186 L7.37161286,8.18580643 C6.51604369,9.22251645 6.00157795,10.5511758 6,
              12 C6,13.7866197 6.78088802,15.3908532 8.01997569,16.4900122 L5.2024372,17.8987814 Z"
                fill="#B9BCBD"
                id="Combined-Shape"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="selectable-selectbox"
        style="left: 0px; top: 0px; width: 0px; height: 0px; z-index: 9000; position: absolute; cursor: default; will-change: transform; transform: translateZ(0);"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
